# nexus-ansible-collection

./: galaxy.yml  pyproject.toml  requirements.txt
.github/workflows/: molecule.yml  test-config-api-role.yml  test-module.yml  test-molecule.yml
molecule/: default-converge.yml  playbook.yml
molecule/db-migration/: ansible.cfg  converge.yml  molecule.yml  prepare.yml
molecule/default-community/: molecule.yml  prepare.yml
molecule/default-community/group_vars/: all.yml
molecule/default-pro/: molecule.yml  prepare.yml
molecule/default-pro/group_vars/: all.yml
plugins/module_utils/: nexus_utils.py
plugins/modules/: download.py  gather_info.py  nexus_info.py  raw_component.py  upload_raw_artifact.py
plugins/modules/config/: user_tokens.py
roles/config_api/tasks/: main.yml
roles/db_migrator/: README.md
roles/db_migrator/defaults/: main.yml
roles/db_migrator/handlers/: main.yml
roles/db_migrator/tasks/: main.yml
roles/db_migrator/vars/: main.yml
roles/nexus_oss/: README.md
roles/nexus_oss/defaults/: main.yml
roles/nexus_oss/tasks/: enable_external_postgresql_database.yml  enable_pro_version.yml  enable_zero_downtime_upgrade.yml  main.yml  nexus_install.yml
tests/: local_test.yml  local_test_upload_artifact.yml
tests/integration/targets/download/tasks/: main.yml
tests/integration/targets/gather_info/tasks/: main.yml
tests/unit/plugins/module_utils/: test_nexus_utils.py  test_repositoryCache.py
tests/unit/plugins/modules/: test_download.py  test_gather_info.py  test_nexus_info.py  test_raw_component.py  test_upload_raw_artifact.py
(+4 files in other folders)
