[project]
name = "nexus-ansible-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.4.0",
    "coverage>=7.3.2",
    "docker>=7.1.0",
    "jmespath>=1.0.1",
    "molecule>=25.4.0",
    "molecule-plugins>=23.7.0",
]
