[project]
name = "nexus-ansible-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ansible>=6.7.0",
    "coverage>=7.6.1",
    "docker>=7.1.0",
    "jmespath>=1.0.1",
    "molecule>=4.0.4",
    "molecule-plugins>=23.0.0",
    "pytest>=7.4.4",
    "pytest-ansible>=4.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]
